--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+browser.id=SL[/Browsers/MicrosoftEdgeBrowser
+copy.src.files=false
+copy.src.on.open=false
+copy.src.target=
 index.file=index.php
-url=http://localhost/PDO-OOP-CRUD/
+run.as=LOCAL
+url=http://localhost/outdoors/
